* Changing all auth calls to hit postgres db instead of template1 (Chris T)
* Centralized database commit for new code (Chris T)
* invoice.unit is now unbounded numeric to reduce errors (Chris T, 3516235)
* Invoices with inventory subject to draft/vouchers workflows (Chris T)
* Added Equity (Temp) account type (Chris T)
* Added description field to AR/AP transaction screen (Chris T)

New RESTful Web Services Framework
* Supports XML and JSON as input formats
* Supports XML and JSON as output formats

New Reporting Framework
* Easy bridge between SQL and display (Chris T)
* All reports exportable to CSV (Chris T)
* All reports exportable to PDF (Chris T)
* Unified UI for reports (Chris T)

Customer/Vendor Handling 
* Added sales tax id and license number fields for companies (Chris T)
* Simpified database schema (Chris T)
* Full text search of notes for customers/vendors (Chris T)

New CSV Import Module
* Imports GL transactions (Chris T)
* Imports AP batches (Chris T)
* Imports charts of accounts entries (Erik H)
* Imports GIFI tables (Erik H)
* Imports SIC tables (Erik H)
* Imports timecards (Chris T)
* Extensible
* field maps can be overridden


New Business Reporting Unit System (Chris T)
* Replaces Projects and Departments
* Business reporting units may be nested
* Allows one to do funds accounting, track jobs separately from projects, etc
* Report on any combination of business reporting units (up to one per class)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.19
* New link for customer/vendor when not a dropdown (Chris T)
* Removed file debugging code from file.pl (Chris T)
* fixed can void voids. (Chris T, h/t Erik Huelsmann, item 3515561)
* Fixed error on taxable sales report (Chris T, 3531784 h/t Nigel T)
* Added missing localization calls to recon approval workflow (Chris T)
* Clarified recon approval workflow (Chris T)
* Fixed error editing non-existent localized template (Chris T, 3531738)